# Autonomus2018

./: README.md
control/obstacle_detector/launch/: nodes.launch
control/obstacle_detector/src/: scans_merger.cpp
control/obstacle_flag/: CMakeLists.txt  package.xml
control/obstacle_flag/cfg/: dynamic_obstacle.yaml  flag_check.yaml  park_obstacle.yaml
control/obstacle_flag/include/obstacle_flag/: data.h
control/obstacle_flag/launch/: obstacle_flag.launch
control/obstacle_flag/src/: obstacle_flag.cpp
sensor/GPS/gps_common/: CMakeLists.txt  package.xml
sensor/GPS/gps_common/launch/: LL_UTM.launch  fix_translator.launch
sensor/GPS/nmea_navsat_driver/: CMakeLists.txt  package.xml
sensor/GPS/nmea_navsat_driver/launch/: GPS.launch  gpsdriver.launch
sensor/GPS/nmea_navsat_driver/msg/: MyMsg.msg
sensor/GPS/nmea_navsat_driver/scripts/: nmea_serial_driver  nmea_topic_serial_reader
sensor/GPS/nmea_navsat_driver/src/: GPS_Subscriber.cpp  GPS_test.cpp
sensor/GPS/nmea_navsat_driver/src/libnmea_navsat_driver/: driver.py
sensor/laser_filters/: CMakeLists.txt  vail_obstacles.launch  vail_obstacles.yaml
sensor/laser_filters/cfg/: dynamic_cut.yaml  test.yaml  uturn_cut.yaml
sensor/laser_filters/examples/: my_laser_config.yaml  my_laser_filter.launch
sensor/laser_filters/launch/: box_test.launch  dynamic_cut.launch
sensor/laser_filters/src/: scan_to_cloud_filter_chain.cpp  scan_to_cloud_point.cpp  scan_to_scan_filter_chain.cpp
sensor/lms1xx/: CMakeLists.txt
sensor/lms1xx/launch/: LMS1xx.launch
sensor/lms1xx/src/: LMS1xx_node.cpp
(+3 files in other folders)
